--- a/index.html
+++ b/index.html
@@ -4,117 +4,95 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hemp Horizon Shop</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <style>
+        /* General Styling */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+
+        /* Navbar Styling */
+        .navbar {
+            background: #004d40;
+            color: white;
+            padding: 1em 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .navbar .logo {
+            font-size: 1.8em;
+            font-weight: bold;
+            margin: 0;
+        }
+
+        .navbar nav {
+            display: flex;
+            gap: 15px;
+        }
+
+        .navbar nav a {
+            text-decoration: none;
+            color: white;
+            background: #57a773;
+            padding: 0.5em 1em;
+            border-radius: 5px;
+            transition: background 0.3s ease;
+        }
+
+        .navbar nav a:hover {
+            background: #459960;
+        }
+
+        /* Main Content */
+        .container {
+            max-width: 800px;
+            margin: 2em auto;
+            background: white;
+            padding: 2em;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        h1 {
+            text-align: center;
+            margin-bottom: 1em;
+        }
+
+        p {
+            line-height: 1.6;
+            font-size: 1.1em;
+            text-align: center;
+        }
+
+        /* Footer Styling */
+        footer {
+            background: #333;
+            color: white;
+            text-align: center;
+            padding: 1em 0;
+            margin-top: 2em;
+        }
+    </style>
 </head>
 <body>
     <header class="navbar">
-        <div class="container">
-            <h1>Hemp Horizon Shop</h1>
-            <nav>
-                <a href="register.html">Register</a>
-                <a href="search.html">Marketplace</a>
-                <a href="add-product.html">Add Product</a>
-                <a href="contact.html">Contact</a>
-                <a href="login.html">Login</a>
-            </nav>
-        </div>
+        <div class="logo">Hemp Horizon Shop</div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="search.html">Marketplace</a>
+            <a href="register.html">Register</a>
+        </nav>
     </header>
-    <main>
-        <!-- Hero Section -->
-        <section class="hero" style="background-image: url('assets/images/hero-banner.jpg');">
-            <div class="hero-content">
-                <h2>Welcome to Hemp Horizon Shop</h2>
-                <p>Your trusted marketplace for premium hemp products.</p>
-                <a href="search.html" class="btn">Explore Marketplace</a>
-                <a href="register.html" class="btn secondary">Join Us</a>
-            </div>
-        </section>
-
-        <!-- About Section -->
-        <section class="about container">
-            <h2>About Hemp Horizon Shop</h2>
-            <p>
-                Hemp Horizon Shop connects buyers and sellers in the hemp industry. Whether you're looking for hemp oils, lotions, seeds, or more,
-                we provide a secure platform for eco-friendly, sustainable products.
-            </p>
-            <p>
-                Our goal is to empower small businesses and provide consumers with access to verified sellers offering high-quality hemp products.
-            </p>
-        </section>
-
-        <!-- Services Section -->
-        <section class="services container">
-            <h2>Our Services</h2>
-            <div class="services-grid">
-                <div class="service-item">
-                    <h3>Marketplace</h3>
-                    <p>Browse a wide range of hemp-based products from trusted sellers.</p>
-                    <a href="search.html" class="btn">Explore Now</a>
-                </div>
-                <div class="service-item">
-                    <h3>Add Products</h3>
-                    <p>Sellers can easily list their products and manage their inventory.</p>
-                    <a href="add-product.html" class="btn">Get Started</a>
-                </div>
-                <div class="service-item">
-                    <h3>Secure Transactions</h3>
-                    <p>All payments are safe, ensuring trust between buyers and sellers.</p>
-                    <a href="payment-gateways.html" class="btn">Payment Gateways</a>
-                </div>
-                <div class="service-item">
-                    <h3>Support</h3>
-                    <p>Need help? Contact us anytime for assistance with your orders or account.</p>
-                    <a href="contact.html" class="btn">Contact Us</a>
-                </div>
-            </div>
-        </section>
-
-        <!-- Featured Products Section -->
-        <section class="featured-products container">
-            <h2>Featured Products</h2>
-            <div class="product-list">
-                <div class="product-item">
-                    <img src="assets/images/hemp-oil.jpg" alt="Hemp Oil">
-                    <h3>Hemp Oil</h3>
-                    <p>Seller: Green Farms</p>
-                    <p>Location: Denver, USA</p>
-                    <p>Price: $19.99 per liter</p>
-                    <a href="search.html" class="btn">View Product</a>
-                </div>
-                <div class="product-item">
-                    <img src="assets/images/hemp-lotion.jpg" alt="Hemp Lotion">
-                    <h3>Hemp Lotion</h3>
-                    <p>Seller: Nature Glow</p>
-                    <p>Location: Seattle, USA</p>
-                    <p>Price: $14.99 per bottle</p>
-                    <a href="search.html" class="btn">View Product</a>
-                </div>
-                <div class="product-item">
-                    <img src="assets/images/hemp-seeds.jpg" alt="Hemp Seeds">
-                    <h3>Hemp Seeds</h3>
-                    <p>Seller: Organic Farms</p>
-                    <p>Location: Austin, USA</p>
-                    <p>Price: $9.99 per pack</p>
-                    <a href="search.html" class="btn">View Product</a>
-                </div>
-                <div class="product-item">
-                    <img src="assets/images/cbd-gummies.jpg" alt="CBD Gummies">
-                    <h3>CBD Gummies</h3>
-                    <p>Seller: Hemp Delights</p>
-                    <p>Location: Miami, USA</p>
-                    <p>Price: $24.99 per jar</p>
-                    <a href="search.html" class="btn">View Product</a>
-                </div>
-            </div>
-        </section>
-
-        <!-- Call-to-Action Section -->
-        <section class="cta" style="background-color: #004d40; color: white; padding: 2em; text-align: center;">
-            <h2>Join Hemp Horizon Shop Today</h2>
-            <p>Sign up now to start buying or selling hemp products on our trusted platform.</p>
-            <a href="register.html" class="btn">Register</a>
-            <a href="login.html" class="btn secondary">Login</a>
-        </section>
+    <main class="container">
+        <h1>Welcome to Hemp Horizon Shop</h1>
+        <p>Your trusted marketplace for premium hemp products. Explore our wide range of products and join our growing community.</p>
+        <p>Whether you're a buyer looking for quality products or a seller seeking to reach a broader audience, we have you covered. Join today!</p>
     </main>
     <footer>
         <div class="container">
@@ -123,4 +101,3 @@
     </footer>
 </body>
 </html>
-
