--- a/index.html
+++ b/index.html
@@ -49,6 +49,27 @@
             background: #459960;
         }
 
+        /* Hero Section */
+        .hero {
+            background-image: url("assets/image/hero-banner.jpg");
+            background-size: cover;
+            background-position: center;
+            color: white;
+            text-align: center;
+            padding: 100px 20px;
+            margin-bottom: 20px;
+        }
+
+        .hero h1 {
+            font-size: 3em;
+            margin: 0 0 10px;
+        }
+
+        .hero p {
+            font-size: 1.5em;
+            margin: 0;
+        }
+
         /* Main Content */
         .container {
             max-width: 800px;
@@ -89,8 +110,12 @@
             <a href="register.html">Register</a>
         </nav>
     </header>
-    <main class="container">
+    <section class="hero">
         <h1>Welcome to Hemp Horizon Shop</h1>
+        <p>Your trusted marketplace for premium hemp products</p>
+    </section>
+    <main class="container">
+        <h1>About Hemp Horizon Shop</h1>
         <p>Your trusted marketplace for premium hemp products. Explore our wide range of products and join our growing community.</p>
         <p>Whether you're a buyer looking for quality products or a seller seeking to reach a broader audience, we have you covered. Join today!</p>
     </main>
