--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             background: #459960;
         }
 
-        /* Hero Section */
+        /* Hero Section Styling */
         .hero {
             background-image: url("assets/image/hero-banner.jpg");
             background-size: cover;
